Improve detection modes feature styling
- Add visual cards for each detection mode
- Add hover effects and better spacing
- Use icons and better typography
- Makes the two modes more visually distinct and appealing

--- a/index.html
+++ b/index.html
@@ -126,12 +126,16 @@
                 <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
                     <div class="feature-icon">🎨</div>
                     <h3 class="feature-title">Two Detection Modes</h3>
-                    <p class="feature-description">
-                        <strong>Sensor Mode:</strong> A bar sensor that sits in front of your computer, 
-                        tracking hand movements in 3D space. Perfect for desktop setups.<br><br>
-                        <strong>Wearable Mode:</strong> Optimized for wrist-worn devices, 
-                        tracking gestures from your wrist. Works in any orientation.
-                    </p>
+                    <div class="feature-description">
+                        <div class="detection-mode">
+                            <div class="mode-label">📊 Sensor Mode</div>
+                            <div class="mode-description">A bar sensor that sits in front of your computer, tracking hand movements in 3D space. Perfect for desktop setups.</div>
+                        </div>
+                        <div class="detection-mode">
+                            <div class="mode-label">⌚ Wearable Mode</div>
+                            <div class="mode-description">Optimized for wrist-worn devices, tracking gestures from your wrist. Works in any orientation.</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
                     <div class="feature-icon">🔒</div>
