--- a/index.html
+++ b/index.html
@@ -83,7 +83,107 @@
         </div>
     </section>
 
-    <!-- Features Section -->
+    <!-- Mode Selection: Flyt vs Flyt Flow -->
+    <section id="modes" class="modes-section">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Choose Your Experience</h2>
+                <p class="section-subtitle">Two ways to control your computer. One platform. Your choice.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Flyt (Sensor Mode) Section -->
+    <section id="flyt-sensor" class="mode-hero mode-sensor">
+        <div class="mode-background">
+            <div class="gradient-orb mode-orb-1"></div>
+        </div>
+        <div class="container">
+            <div class="mode-content">
+                <div class="mode-header">
+                    <div class="mode-badge">Sensor Mode</div>
+                    <h2 class="mode-title">
+                        <span class="mode-name">Flyt</span>
+                        <span class="mode-tagline">Desktop Precision</span>
+                    </h2>
+                    <p class="mode-description">
+                        A sleek bar sensor that sits in front of your computer, tracking your hand movements 
+                        in full 3D space. Perfect for desktop setups where precision and range matter.
+                    </p>
+                </div>
+                <div class="mode-features">
+                    <div class="mode-feature-item">
+                        <div class="mode-feature-icon">📊</div>
+                        <div class="mode-feature-text">
+                            <h4>3D Space Tracking</h4>
+                            <p>Full spatial awareness of hand movements in front of your screen</p>
+                        </div>
+                    </div>
+                    <div class="mode-feature-item">
+                        <div class="mode-feature-icon">🖥️</div>
+                        <div class="mode-feature-text">
+                            <h4>Desktop Optimized</h4>
+                            <p>Designed for stationary setups with your computer</p>
+                        </div>
+                    </div>
+                    <div class="mode-feature-item">
+                        <div class="mode-feature-icon">🎯</div>
+                        <div class="mode-feature-text">
+                            <h4>Precision Control</h4>
+                            <p>Accurate gesture recognition with wide detection range</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Flyt Flow (Wearable Mode) Section -->
+    <section id="flyt-flow" class="mode-hero mode-wearable">
+        <div class="mode-background">
+            <div class="gradient-orb mode-orb-2"></div>
+        </div>
+        <div class="container">
+            <div class="mode-content">
+                <div class="mode-header">
+                    <div class="mode-badge">Wearable Mode</div>
+                    <h2 class="mode-title">
+                        <span class="mode-name">Flyt Flow</span>
+                        <span class="mode-tagline">Freedom of Movement</span>
+                    </h2>
+                    <p class="mode-description">
+                        Optimized for wrist-worn devices, tracking gestures directly from your wrist. 
+                        Works in any orientation—perfect for presentations, coding, or on-the-go control.
+                    </p>
+                </div>
+                <div class="mode-features">
+                    <div class="mode-feature-item">
+                        <div class="mode-feature-icon">⌚</div>
+                        <div class="mode-feature-text">
+                            <h4>Wrist-Based Tracking</h4>
+                            <p>Gesture recognition from your wrist, wherever you are</p>
+                        </div>
+                    </div>
+                    <div class="mode-feature-item">
+                        <div class="mode-feature-icon">🔄</div>
+                        <div class="mode-feature-text">
+                            <h4>Any Orientation</h4>
+                            <p>Works whether you're standing, sitting, or moving around</p>
+                        </div>
+                    </div>
+                    <div class="mode-feature-item">
+                        <div class="mode-feature-icon">🚀</div>
+                        <div class="mode-feature-text">
+                            <h4>Portable Control</h4>
+                            <p>Take gesture control with you, no desk setup required</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Shared Features Section -->
     <section id="features" class="features">
         <div class="container">
             <div class="section-header">
@@ -124,20 +224,6 @@
                     </p>
                 </div>
                 <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
-                    <div class="feature-icon">🎨</div>
-                    <h3 class="feature-title">Two Detection Modes</h3>
-                    <div class="feature-description">
-                        <div class="detection-mode">
-                            <div class="mode-label">📊 Sensor Mode</div>
-                            <div class="mode-description">A bar sensor that sits in front of your computer, tracking hand movements in 3D space. Perfect for desktop setups.</div>
-                        </div>
-                        <div class="detection-mode">
-                            <div class="mode-label">⌚ Wearable Mode</div>
-                            <div class="mode-description">Optimized for wrist-worn devices, tracking gestures from your wrist. Works in any orientation.</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
                     <div class="feature-icon">🔒</div>
                     <h3 class="feature-title">Activation System</h3>
                     <p class="feature-description">
