Add interactive mode selection buttons with smooth scroll
- Add two prominent buttons under 'Choose Your Experience'
- Flyt (Sensor Mode) button scrolls to sensor section
- Flyt Flow (Wearable Mode) button scrolls to wearable section
- Buttons have hover effects with gradient backgrounds
- Smooth scroll animation when clicking buttons
- Responsive design for mobile devices

--- a/index.html
+++ b/index.html
@@ -90,6 +90,26 @@
                 <h2 class="section-title">Choose Your Experience</h2>
                 <p class="section-subtitle">Two ways to control your computer. One platform. Your choice.</p>
             </div>
+            <div class="mode-selection-buttons">
+                <a href="#flyt-sensor" class="mode-selection-button mode-button-sensor">
+                    <div class="mode-button-icon">📊</div>
+                    <div class="mode-button-content">
+                        <h3 class="mode-button-title">Flyt</h3>
+                        <p class="mode-button-subtitle">Sensor Mode</p>
+                        <p class="mode-button-description">Desktop precision with bar sensor</p>
+                    </div>
+                    <div class="mode-button-arrow">→</div>
+                </a>
+                <a href="#flyt-flow" class="mode-selection-button mode-button-wearable">
+                    <div class="mode-button-icon">⌚</div>
+                    <div class="mode-button-content">
+                        <h3 class="mode-button-title">Flyt Flow</h3>
+                        <p class="mode-button-subtitle">Wearable Mode</p>
+                        <p class="mode-button-description">Freedom of movement with wrist tracking</p>
+                    </div>
+                    <div class="mode-button-arrow">→</div>
+                </a>
+            </div>
         </div>
     </section>
 
