--- a/index.html
+++ b/index.html
@@ -90,9 +90,15 @@
                 <h2 class="section-title">Choose Your Experience</h2>
                 <p class="section-subtitle">Two ways to control your computer. One platform. Your choice.</p>
             </div>
+            <div class="mode-selection-visual">
+                <div class="visual-divider-line"></div>
+            </div>
             <div class="mode-selection-buttons">
                 <a href="#flyt-sensor" class="mode-selection-button mode-button-sensor">
-                    <div class="mode-button-icon">📊</div>
+                    <div class="mode-button-visual">
+                        <div class="mode-button-icon">📊</div>
+                        <div class="button-glow sensor-glow-preview"></div>
+                    </div>
                     <div class="mode-button-content">
                         <h3 class="mode-button-title">Flyt</h3>
                         <p class="mode-button-subtitle">Sensor Mode</p>
@@ -101,7 +107,10 @@
                     <div class="mode-button-arrow">→</div>
                 </a>
                 <a href="#flyt-flow" class="mode-selection-button mode-button-wearable">
-                    <div class="mode-button-icon">⌚</div>
+                    <div class="mode-button-visual">
+                        <div class="mode-button-icon">⌚</div>
+                        <div class="button-glow wearable-glow-preview"></div>
+                    </div>
                     <div class="mode-button-content">
                         <h3 class="mode-button-title">Flyt Flow</h3>
                         <p class="mode-button-subtitle">Wearable Mode</p>
@@ -117,9 +126,34 @@
     <section id="flyt-sensor" class="mode-hero mode-sensor">
         <div class="mode-background">
             <div class="gradient-orb mode-orb-1"></div>
+            <div class="animated-grid sensor-grid"></div>
         </div>
         <div class="container">
             <div class="mode-content">
+                <div class="mode-visual-wrapper">
+                    <div class="mode-visual mode-visual-sensor">
+                        <div class="sensor-device">
+                            <div class="sensor-bar">
+                                <div class="sensor-glow"></div>
+                            </div>
+                            <div class="tracking-area">
+                                <div class="hand-tracking-point point-1"></div>
+                                <div class="hand-tracking-point point-2"></div>
+                                <div class="hand-tracking-point point-3"></div>
+                                <div class="tracking-line line-1"></div>
+                                <div class="tracking-line line-2"></div>
+                                <div class="tracking-line line-3"></div>
+                            </div>
+                        </div>
+                        <div class="floating-particles">
+                            <div class="particle"></div>
+                            <div class="particle"></div>
+                            <div class="particle"></div>
+                            <div class="particle"></div>
+                            <div class="particle"></div>
+                        </div>
+                    </div>
+                </div>
                 <div class="mode-header">
                     <div class="mode-badge">Sensor Mode</div>
                     <h2 class="mode-title">
@@ -162,9 +196,32 @@
     <section id="flyt-flow" class="mode-hero mode-wearable">
         <div class="mode-background">
             <div class="gradient-orb mode-orb-2"></div>
+            <div class="animated-grid wearable-grid"></div>
         </div>
         <div class="container">
             <div class="mode-content">
+                <div class="mode-visual-wrapper">
+                    <div class="mode-visual mode-visual-wearable">
+                        <div class="wearable-device">
+                            <div class="watch-face">
+                                <div class="watch-screen"></div>
+                                <div class="watch-glow"></div>
+                            </div>
+                            <div class="gesture-waves">
+                                <div class="wave wave-1"></div>
+                                <div class="wave wave-2"></div>
+                                <div class="wave wave-3"></div>
+                            </div>
+                        </div>
+                        <div class="floating-particles">
+                            <div class="particle"></div>
+                            <div class="particle"></div>
+                            <div class="particle"></div>
+                            <div class="particle"></div>
+                            <div class="particle"></div>
+                        </div>
+                    </div>
+                </div>
                 <div class="mode-header">
                     <div class="mode-badge">Wearable Mode</div>
                     <h2 class="mode-title">
