Fix mode section layout - properly center feature boxes
- Restructure mode-content to use flexbox column layout
- Add mode-content-top for visual and header (side by side)
- Add mode-content-bottom for features (full width, centered)
- Feature boxes now properly centered and not constrained
- Fix container structure for better layout
- Update both index.html and templates/flyt.html

--- a/index.html
+++ b/index.html
@@ -130,61 +130,65 @@
         </div>
         <div class="container">
             <div class="mode-content">
-                <div class="mode-visual-wrapper">
-                    <div class="mode-visual mode-visual-sensor">
-                        <div class="sensor-device">
-                            <div class="sensor-bar">
-                                <div class="sensor-glow"></div>
+                <div class="mode-content-top">
+                    <div class="mode-visual-wrapper">
+                        <div class="mode-visual mode-visual-sensor">
+                            <div class="sensor-device">
+                                <div class="sensor-bar">
+                                    <div class="sensor-glow"></div>
+                                </div>
+                                <div class="tracking-area">
+                                    <div class="hand-tracking-point point-1"></div>
+                                    <div class="hand-tracking-point point-2"></div>
+                                    <div class="hand-tracking-point point-3"></div>
+                                    <div class="tracking-line line-1"></div>
+                                    <div class="tracking-line line-2"></div>
+                                    <div class="tracking-line line-3"></div>
+                                </div>
                             </div>
-                            <div class="tracking-area">
-                                <div class="hand-tracking-point point-1"></div>
-                                <div class="hand-tracking-point point-2"></div>
-                                <div class="hand-tracking-point point-3"></div>
-                                <div class="tracking-line line-1"></div>
-                                <div class="tracking-line line-2"></div>
-                                <div class="tracking-line line-3"></div>
+                            <div class="floating-particles">
+                                <div class="particle"></div>
+                                <div class="particle"></div>
+                                <div class="particle"></div>
+                                <div class="particle"></div>
+                                <div class="particle"></div>
                             </div>
                         </div>
-                        <div class="floating-particles">
-                            <div class="particle"></div>
-                            <div class="particle"></div>
-                            <div class="particle"></div>
-                            <div class="particle"></div>
-                            <div class="particle"></div>
-                        </div>
+                    </div>
+                    <div class="mode-header">
+                        <div class="mode-badge">Sensor Mode</div>
+                        <h2 class="mode-title">
+                            <span class="mode-name">Flyt</span>
+                            <span class="mode-tagline">Desktop Precision</span>
+                        </h2>
+                        <p class="mode-description">
+                            A sleek bar sensor that sits in front of your computer, tracking your hand movements 
+                            in full 3D space. Perfect for desktop setups where precision and range matter.
+                        </p>
                     </div>
                 </div>
-                <div class="mode-header">
-                    <div class="mode-badge">Sensor Mode</div>
-                    <h2 class="mode-title">
-                        <span class="mode-name">Flyt</span>
-                        <span class="mode-tagline">Desktop Precision</span>
-                    </h2>
-                    <p class="mode-description">
-                        A sleek bar sensor that sits in front of your computer, tracking your hand movements 
-                        in full 3D space. Perfect for desktop setups where precision and range matter.
-                    </p>
-                </div>
-                <div class="mode-features">
-                    <div class="mode-feature-item">
-                        <div class="mode-feature-icon">📊</div>
-                        <div class="mode-feature-text">
-                            <h4>3D Space Tracking</h4>
-                            <p>Full spatial awareness of hand movements in front of your screen</p>
+                <div class="mode-content-bottom">
+                    <div class="mode-features">
+                        <div class="mode-feature-item">
+                            <div class="mode-feature-icon">📊</div>
+                            <div class="mode-feature-text">
+                                <h4>3D Space Tracking</h4>
+                                <p>Full spatial awareness of hand movements in front of your screen</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="mode-feature-item">
-                        <div class="mode-feature-icon">🖥️</div>
-                        <div class="mode-feature-text">
-                            <h4>Desktop Optimized</h4>
-                            <p>Designed for stationary setups with your computer</p>
+                        <div class="mode-feature-item">
+                            <div class="mode-feature-icon">🖥️</div>
+                            <div class="mode-feature-text">
+                                <h4>Desktop Optimized</h4>
+                                <p>Designed for stationary setups with your computer</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="mode-feature-item">
-                        <div class="mode-feature-icon">🎯</div>
-                        <div class="mode-feature-text">
-                            <h4>Precision Control</h4>
-                            <p>Accurate gesture recognition with wide detection range</p>
+                        <div class="mode-feature-item">
+                            <div class="mode-feature-icon">🎯</div>
+                            <div class="mode-feature-text">
+                                <h4>Precision Control</h4>
+                                <p>Accurate gesture recognition with wide detection range</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -200,59 +204,63 @@
         </div>
         <div class="container">
             <div class="mode-content">
-                <div class="mode-visual-wrapper">
-                    <div class="mode-visual mode-visual-wearable">
-                        <div class="wearable-device">
-                            <div class="watch-face">
-                                <div class="watch-screen"></div>
-                                <div class="watch-glow"></div>
+                <div class="mode-content-top">
+                    <div class="mode-visual-wrapper">
+                        <div class="mode-visual mode-visual-wearable">
+                            <div class="wearable-device">
+                                <div class="watch-face">
+                                    <div class="watch-screen"></div>
+                                    <div class="watch-glow"></div>
+                                </div>
+                                <div class="gesture-waves">
+                                    <div class="wave wave-1"></div>
+                                    <div class="wave wave-2"></div>
+                                    <div class="wave wave-3"></div>
+                                </div>
                             </div>
-                            <div class="gesture-waves">
-                                <div class="wave wave-1"></div>
-                                <div class="wave wave-2"></div>
-                                <div class="wave wave-3"></div>
+                            <div class="floating-particles">
+                                <div class="particle"></div>
+                                <div class="particle"></div>
+                                <div class="particle"></div>
+                                <div class="particle"></div>
+                                <div class="particle"></div>
                             </div>
                         </div>
-                        <div class="floating-particles">
-                            <div class="particle"></div>
-                            <div class="particle"></div>
-                            <div class="particle"></div>
-                            <div class="particle"></div>
-                            <div class="particle"></div>
-                        </div>
+                    </div>
+                    <div class="mode-header">
+                        <div class="mode-badge">Wearable Mode</div>
+                        <h2 class="mode-title">
+                            <span class="mode-name">Flyt Flow</span>
+                            <span class="mode-tagline">Freedom of Movement</span>
+                        </h2>
+                        <p class="mode-description">
+                            Optimized for wrist-worn devices, tracking gestures directly from your wrist. 
+                            Works in any orientation—perfect for presentations, coding, or on-the-go control.
+                        </p>
                     </div>
                 </div>
-                <div class="mode-header">
-                    <div class="mode-badge">Wearable Mode</div>
-                    <h2 class="mode-title">
-                        <span class="mode-name">Flyt Flow</span>
-                        <span class="mode-tagline">Freedom of Movement</span>
-                    </h2>
-                    <p class="mode-description">
-                        Optimized for wrist-worn devices, tracking gestures directly from your wrist. 
-                        Works in any orientation—perfect for presentations, coding, or on-the-go control.
-                    </p>
-                </div>
-                <div class="mode-features">
-                    <div class="mode-feature-item">
-                        <div class="mode-feature-icon">⌚</div>
-                        <div class="mode-feature-text">
-                            <h4>Wrist-Based Tracking</h4>
-                            <p>Gesture recognition from your wrist, wherever you are</p>
+                <div class="mode-content-bottom">
+                    <div class="mode-features">
+                        <div class="mode-feature-item">
+                            <div class="mode-feature-icon">⌚</div>
+                            <div class="mode-feature-text">
+                                <h4>Wrist-Based Tracking</h4>
+                                <p>Gesture recognition from your wrist, wherever you are</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="mode-feature-item">
-                        <div class="mode-feature-icon">🔄</div>
-                        <div class="mode-feature-text">
-                            <h4>Any Orientation</h4>
-                            <p>Works whether you're standing, sitting, or moving around</p>
+                        <div class="mode-feature-item">
+                            <div class="mode-feature-icon">🔄</div>
+                            <div class="mode-feature-text">
+                                <h4>Any Orientation</h4>
+                                <p>Works whether you're standing, sitting, or moving around</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="mode-feature-item">
-                        <div class="mode-feature-icon">🚀</div>
-                        <div class="mode-feature-text">
-                            <h4>Portable Control</h4>
-                            <p>Take gesture control with you, no desk setup required</p>
+                        <div class="mode-feature-item">
+                            <div class="mode-feature-icon">🚀</div>
+                            <div class="mode-feature-text">
+                                <h4>Portable Control</h4>
+                                <p>Take gesture control with you, no desk setup required</p>
+                            </div>
                         </div>
                     </div>
                 </div>
