--- a/index.html
+++ b/index.html
@@ -359,6 +359,9 @@
                     </div>
                 </div>
             </div>
+            <div class="how-it-works-visual">
+                <img src="assets/FlytApp.png" alt="Flyt Application Interface" class="flyt-app-image">
+            </div>
         </div>
     </section>
 
