ProtectOnt Option A: sync FFord to ledger, serve at root for protectont.ca, redirect darkai.ca/ledger
- Sync FFord source into ledger/ (Protect Ontario rebrand, timeline, water/wildlife/greenbelt)
- Flask Option A: protectont.ca serves Ledger at root; darkai.ca/ledger -> 302 to protectont.ca
- Remove old /ledger route; add serve_ledger_at_root + before_request
- render.yaml: build ledger with npm run build:protectont (no base path) for root serving

--- a/ledger/public/logo-preview.html
+++ b/ledger/public/logo-preview.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Logo Concepts - The Ledger</title>
+  <title>Logo Concepts - Protect Ontario</title>
   <style>
     body {
       font-family: system-ui, -apple-system, sans-serif;
@@ -57,12 +57,12 @@
   </style>
 </head>
 <body>
-  <h1>Logo Concepts for "The Ledger"</h1>
+  <h1>Logo Concepts for "Protect Ontario"</h1>
   
   <div class="logo-grid">
     <div class="logo-card">
       <div class="logo-preview">
-        <img src="/logo-ledger-book.svg" alt="Ledger Book Logo" style="max-width: 100%; height: auto;">
+        <img src="/logo-ledger-book.svg" alt="Protect Ontario logo concept: open book" style="max-width: 100%; height: auto;">
       </div>
       <h3>Ledger Book</h3>
       <p>Classic open book with ledger lines</p>
@@ -94,7 +94,7 @@
     
     <div class="logo-card">
       <div class="logo-preview">
-        <img src="/logo-text-only.svg" alt="Text Only Logo" style="max-width: 100%; height: auto;">
+        <img src="/logo-text-only.svg" alt="Protect Ontario (text only)" style="max-width: 100%; height: auto;">
       </div>
       <h3>Text Only</h3>
       <p>Typography-focused with red accent</p>
@@ -102,10 +102,10 @@
     
     <div class="logo-card">
       <div class="logo-preview">
-        <img src="/logo-icon-text.svg" alt="Icon + Text Logo" style="max-width: 100%; height: auto;">
+        <img src="/logo-icon-text.svg" alt="ProtectOnt.ca (shield + text)" style="max-width: 100%; height: auto;">
       </div>
-      <h3>Icon + Text</h3>
-      <p>Small document icon with text</p>
+      <h3>Shield + Text</h3>
+      <p>Shield (maple leaf + waves) + &quot;ProtectOnt.ca&quot; two-tone text (nav logo)</p>
     </div>
   </div>
   
@@ -115,7 +115,7 @@
       <li>All logos use the project's red accent color (#DC2626)</li>
       <li>SVG format ensures crisp display at any size</li>
       <li>Logos work on both light and dark backgrounds</li>
-      <li>To use: Replace the current logo in <code>TopNavigation.tsx</code> with one of these</li>
+      <li>Nav uses <code>logo-icon-text.svg</code> (ProtectOnt.ca shield + text). Used in <code>TopNavigation.tsx</code>.</li>
     </ul>
   </div>
 </body>
